<resources>
    <string name="app_name">Drive Together</string>
    <string name="text_splash_screen_headline">Drive Together</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Login</string>
    <string name="label_sign_up">Don\'t have account? Sign up</string>
    <string name="link_sign_up">Sign up</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="error_no_username">Username is empty</string>
    <string name="error_no_password">Password is empty</string>
    <string name="error_minimum_length">Length at least %d</string>
    <string name="error_username_colon">Username can\'t contain \':\'</string>
    <string name="error_password_colon">Password can\'t contain \':\'</string>
    <string name="ok">OK</string>
    <string name="server_error_generic">Some error happened</string>
    <string name="label_forgot_password">Forgot your password?</string>
    <string name="link_forgot_password">Forgot your password?</string>
    <string name="cancel">Cancel</string>
    <string name="info_account_exists">Account with specified username already exists.</string>
    <string name="button_to_login">To Login</string>
    <string name="back">Back</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_city">City</string>
    <string name="hint_user_type">User type</string>
    <string name="button_continue">Continue</string>
    <string name="title_activity_create_user">Create User</string>
    <string name="user_type_driver">Driver</string>
    <string name="user_type_passenger">Passenger</string>
    <string name="error_no_name">Name is empty</string>
    <string name="error_no_email">Email is empty</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_no_city">City is empty</string>
    <string name="warning_user_already_exists">User already exists. Do you want to login as different user?</string>
    <string name="hint_driver_license">Driver\'s License Date</string>
    <string name="hint_birth_date">Birth Date</string>
    <string name="error_no_birth_date">Birth date is empty</string>
    <string name="error_no_driver_license">Driver\'s license date is empty</string>
    <string name="hint_cars">Cars</string>
    <string name="title_activity_create_car">Create Car</string>
    <string name="button_add">Add</string>
    <string name="hint_make">Make</string>
    <string name="hint_model">Model</string>
    <string name="hint_car_year">Year</string>
    <string name="hint_car_plates">License Plates</string>
    <string name="error_no_car_year">Year is empty</string>
    <string name="error_no_plates">Plates is empty</string>
    <string name="error_invalid_plates">Invalid plates ex. BG 123-AA</string>
    <string name="action_edit">Edit</string>
    <string name="action_remove">Remove</string>
    <string name="button_update">Update</string>
    <string name="error_wrong_credentials">Username and password does not match</string>
    <string name="title_activity_home">Home</string>
    <string name="action_drives">Drives</string>
    <string name="error_no_internet_connection">No internet connection</string>
    <string name="text_no_drives_atm">No shared drives at the moment</string>
    <string name="button_offer_lift">Offer a lift</string>
    <string name="abbreviation_monday">M</string>
    <string name="abbreviation_tuesday">T</string>
    <string name="abbreviation_wednesday">W</string>
    <string name="abbreviation_thursday">T</string>
    <string name="abbreviation_friday">F</string>
    <string name="abbreviation_saturday">S</string>
    <string name="abbreviation_sunday">S</string>
    <string name="drive_price_total">%.2f RSD total</string>
    <string name="drive_price_per_passenger">%.2f RSD per passenger</string>
    <string name="text_no_stops">No stops</string>
    <string name="action_filter">Filter</string>
    <string name="title_activity_create_shared_drive">New Shared Drive</string>
    <string name="action_save">Save</string>
    <string name="label_departure">Departure</string>
    <string name="label_destination">Destination</string>
    <string name="label_seats">Seats</string>
    <string name="label_car">Car</string>
    <string name="preference_music">Music</string>
    <string name="preference_talking">Talking</string>
    <string name="preference_pets">Pets</string>
    <string name="preference_smoking">Smoking</string>
    <string name="label_date">Date</string>
    <string name="label_departure_time">Departure time</string>
    <string name="label_arrival_time">Arrival time</string>
    <string name="error_shared_drive_departure">Enter departure</string>
    <string name="error_shared_drive_destination">Enter destination</string>
    <string name="error_shared_drive_seats">Enter number of seats</string>
    <string name="error_shared_drive_date">Enter date</string>
    <string name="error_shared_drive_departure_time">Enter departure time</string>
    <string name="error_shared_drive_arrival_time">Enter arrival time</string>
    <string name="label_price_type">Price type</string>
    <string name="label_price">Price</string>
    <string name="price_type_by_person">By person</string>
    <string name="price_type_total">Total</string>
    <string name="error_shared_drive_price">Enter price</string>
    <string name="label_repeat">Repeat</string>
    <string name="preference_positive">Positive</string>
    <string name="preference_neutral">Neutral</string>
    <string name="preference_negative">Negative</string>
    <string name="title_fragment_shared_drives">Drives</string>
    <string name="title_activity_view_shared_drive">Shared Drive</string>
    <string name="action_delete">Delete</string>
    <string name="prompt_delete_shared_drive">Are you sure you want to delete shared drive?</string>
    <string name="prompt_answer_yes">Yes</string>
    <string name="prompt_answer_no">No</string>
    <string name="button_request_a_ride">Request a ride</string>
    <string name="button_cancel_ride_request">Cancel request</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="notification_title_ride_requested">Drive request</string>
    <string name="notification_content_ride_requested">%1$s has requested a ride %2$s</string>
    <string name="notification_ticker_ride_requested">New drive request</string>
    <string name="notification_ticker_ride_request_canceled">Drive request canceled</string>
    <string name="notification_title_ride_request_canceled">Drive request canceled</string>
    <string name="notification_content_ride_request_canceled">%1$s has canceled ride request %2$s</string>
    <string name="title_activity_profile">Profile</string>
    <string name="label_select_image">Select image</string>
    <string name="action_my_drives">My drives</string>
    <string name="prompt_logout">Are you sure you want to logout?</string>
    <string name="action_change_password">Change password</string>
    <string name="action_delete_account">Delete account</string>
    <string name="prompt_delete_account">Are you sure you want to delete account? You can\'t restore it later.</string>
    <string name="text_no_my_drives">You don\'t have any drive</string>
    <string name="title_fragment_my_drives">My Drives</string>
    <string name="button_give_feedback">Give feedback</string>
    <string name="title_activity_give_feedback">Feedback</string>
    <string name="label_driver">Driver</string>
    <string name="label_passengers">Passengers</string>
    <string name="button_reset_password">Reset password</string>
    <string name="info_password_reset_requested">We\'ll send you instructions on how to reset your password or create an account, if no one is associated with \"%s\". If you do not receive an email from us, please check your spam folder.</string>
    <string name="notification_ticker_new_ride">New drive matching your filter</string>
    <string name="notification_title_new_ride">New drive</string>
    <string name="notification_content_new_ride">New drive by %1$s from %2$s to %3$s</string>
    <string name="button_clear_filter">Clear filter</string>
    <string name="label_stops">Stops</string>
    <string name="label_drive_stop">Stop</string>
</resources>
