<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.registration.CreateUserActivity" >

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_side_margin" >

            <TextView
                android:id="@+id/text_view_make"
                android:text="@string/hint_make"
                android:layout_marginLeft="5dp"
                style="@style/TextAppearance.Design.Hint"
                android:textColor="?android:attr/textColorSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/spinner_make"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_view_model"
                android:text="@string/hint_model"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="@dimen/layout_control_space"
                style="@style/TextAppearance.Design.Hint"
                android:textColor="?android:attr/textColorSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/spinner_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_year"
                app:errorTextAppearance="@style/TextAppearance.Error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_text_year"
                    android:hint="@string/hint_car_year"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_plates"
                app:errorTextAppearance="@style/TextAppearance.Error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_text_plates"
                    android:hint="@string/hint_car_plates"
                    android:inputType="textCapCharacters"
                    android:textAllCaps="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/button_create_car"
        android:text="@string/button_add"
        android:layout_marginLeft="@dimen/layout_side_margin"
        android:layout_marginRight="@dimen/layout_side_margin"
        android:layout_marginBottom="@dimen/layout_bottom_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>