<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/layout_side_margin">

            <ImageView
                android:id="@+id/image_view_user_photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@null"
                android:src="@drawable/ic_user_placeholder_dark" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/TextAppearance.Error">

                <EditText
                    android:id="@+id/edit_text_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorText" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/TextAppearance.Error">

                <EditText
                    android:id="@+id/edit_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorText" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/TextAppearance.Error">

                <EditText
                    android:id="@+id/edit_text_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_city"
                    android:inputType="textCapWords"
                    android:textColor="@color/colorText" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_birth_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/TextAppearance.Error">

                <EditText
                    android:id="@+id/edit_text_birth_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_birth_date"
                    android:inputType="date"
                    android:textColor="@color/colorText" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/text_view_user_type"
                style="@style/TextAppearance.Design.Hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="@dimen/layout_control_space"
                android:text="@string/hint_user_type"
                android:textColor="?android:attr/textColorSecondary" />

            <Spinner
                android:id="@+id/spinner_user_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/driver_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_control_space"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_driver_license"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorTextAppearance="@style/TextAppearance.Error">

                    <EditText
                        android:id="@+id/edit_text_driver_license"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_driver_license"
                        android:inputType="date"
                        android:textColor="@color/colorText" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_view_cars"
                        style="@style/TextAppearance.Design.Hint"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="@dimen/layout_control_space"
                        android:layout_weight="1"
                        android:text="@string/hint_cars"
                        android:textColor="?android:attr/textColorSecondary" />

                    <ImageView
                        android:id="@+id/image_view_add_car"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_add" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/cars_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="?attr/dividerHorizontal"
                    android:orientation="vertical"
                    android:showDividers="middle" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>